--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,5 @@
 <div class = "container">
-  <h3>Choose the cocktail that suits you</h3>
+  <h3>Create the cocktail that suits you</h3>
   <%=link_to "Create a new cocktail", new_cocktail_url%>
   <ul>
     <%@cocktails.each do |f|%>
