--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,4 +1,6 @@
-<%= simple_form_for(@cocktail) do |c| %>
-  <%= c.input :name %>
-  <%= c.submit %>
-<% end %>
+<div id = "new_cocktail" class = "container">
+  <%= simple_form_for(@cocktail) do |c| %>
+    <%= c.input :name %>
+    <%= c.submit %>
+  <% end %>
+</div>
