Added the last changes

--- a/app/assets/rails-stylesheets-master/application.scss
+++ b/app/assets/rails-stylesheets-master/application.scss
@@ -9,6 +9,8 @@
 @import "font-awesome";
 
 // Your CSS partials
-@import "components/index";
+@import "components/navbar";
 @import "pages/index";
 @import 'select2/dist/css/select2';
+
+
