--- a/app/assets/rails-stylesheets-master/components/_navbar.scss
+++ b/app/assets/rails-stylesheets-master/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  display: flex;
+  box-shadow: 2px 3px 14px 1px rgba(0,0,0,0.75);
+  padding: 1rem;
 }
 
 .navbar-lewagon .navbar-collapse {
