--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,6 +1,7 @@
 <div id = "new_cocktail" class = "container">
   <%= simple_form_for(@cocktail) do |c| %>
     <%= c.input :name %>
+    <%= c.input :photo, as: :file %>
     <%= c.submit %>
   <% end %>
 </div>
