--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,34 +1,44 @@
-<div class = "container">
-<%=link_to "Cocktails list", root_path%>
-<% if @cocktail.photo.attached? %>
-  <%= cl_image_tag @cocktail.photo.key, height: 400, width: 400, crop: :fill %>
-<% else %>
-  <%= cl_image_tag("https://res.cloudinary.com/chirilac/image/upload/c_fit,h_4993/v1590354557/home_ngdmwp.jpg", height: 400, width: 400) %>
-<% end %>
-  
-<h3><%=@cocktail.name%></h3>
-<h4>Recipe</h4>
-<table>
-  <tbody>
-    <thead>
-      <th>Ingredient</th>
-      <th>Description</th>
-      <th>Action</th>
-    </thead>
-      <%@cocktail.doses.each do |dose|%>
-    <tr>
-      <td><%=dose.ingredient.name%></td>
-      <td><%=dose.description%></td>
-      <td>
-      <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
-                  <i class="fa fa-trash destroy_dose"></i>
-                <% end %>
-      </td>
-      <%end%>
-    </tr>
-  </tbody>
-</table>
+<div class="navbar-lewagon" >
+  <div>
+    <%=link_to "Back to cocktails list", root_path%>
+  </div>
+    <h3 class = "nav cocktail"> <%= @cocktail.name %></h3>
+  <div>
+    <%=link_to "Create a new cocktail", new_cocktail_url, class: "nav"%>
+  </div>
+</div>
 
-<%= render "doses/new", cocktail: @cocktail, dose: @dose%>
+<div class = "container mt-5">
+  <div class = "recipe">
+    <% if @cocktail.photo.attached? %>
+      <%= cl_image_tag @cocktail.photo.key, height: 300, width: 288 %>
+    <% else %>
+      <%= cl_image_tag("https://res.cloudinary.com/chirilac/image/upload/v1592397399/default_a29ja9.jpg", :radius=>8, height: 300, width: 288) %>
+    <% end %>
+    <h4 class = "my-3 ">Recipe</h4>
+    <table class = "my-3">
+      <tbody>
+        <thead>
+          <th>Ingredient</th>
+          <th>Description</th>
+          <th>Action</th>
+        </thead>
+          <%@cocktail.doses.each do |dose|%>
+        <tr>
+          <td><%=dose.ingredient.name%></td>
+          <td><%=dose.description%></td>
+          <td>
+          <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
+            <i class="fa fa-trash destroy_dose"></i>
+          <% end %>
+          </td>
+          <%end%>
+        </tr>
+      </tbody>
+    </table>
+    <div class = "new_dose mt-5">
+      <%= render "doses/new", cocktail: @cocktail, dose: @dose%>
+    </div>
+  </div>
 </div>
 
