add devise and home page

--- a/app/assets/rails-stylesheets-master/pages/_home.scss
+++ b/app/assets/rails-stylesheets-master/pages/_home.scss
@@ -40,9 +40,10 @@ body{
 .new_dose{
   width: 300px;
 }
-#new_cocktail{
-  width: 300px;
-}
+// #new_cocktail{
+//   width: 300px;
+//   background-color: white;
+// }
 
 
 
