--- a/app/assets/rails-stylesheets-master/application.scss
+++ b/app/assets/rails-stylesheets-master/application.scss
@@ -9,7 +9,7 @@
 @import "font-awesome";
 
 // Your CSS partials
-@import "components/navbar";
+@import "components/index";
 @import "pages/index";
 @import 'select2/dist/css/select2';
 
