add order table and home page

--- a/app/assets/rails-stylesheets-master/components/_navbar.scss
+++ b/app/assets/rails-stylesheets-master/components/_navbar.scss
@@ -2,7 +2,14 @@
   justify-content: space-between;
   display: flex;
   box-shadow: 2px 3px 14px 1px rgba(0,0,0,0.75);
-  padding: 1rem;
+  // padding: 1rem;
+  background-color: black;
+  height: 15vh;
+  
+}
+
+.nav-link{
+  color: white !important;
 }
 
 .navbar-lewagon .navbar-collapse {
