--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="home">
+  <div class="titles">
+    <h1>Stay safe</h1>
+    <h2>Explore our menu and order your cocktails at the table</h2>
+  </div>
+
+
+</div>
