--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -24,6 +24,7 @@
             <div class="card-body">
               <h5 class="card-title"><%=f.name%></h5>
               <%=link_to "Details", cocktail_path(f), class:"btn btn-info"%>
+              <%=link_to "Order cocktail", new_order_path, class:"btn btn-info"%>
             </div>
           </div>
         </div>
